fix header grid gap

--- a/styles/includes/header.styl
+++ b/styles/includes/header.styl
@@ -12,7 +12,8 @@ header
 	width: 100%
 	height: 4em
 
-	makeGrid(200px 1fr, 3em)
+	makeGrid(200px 1fr, 0)
+	grid-row-gap: 3em
 
 	a[aria-label=logo]
 		line-height: 0
